--- a/contact_us.html
+++ b/contact_us.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1> Contact us</h1>
+    <p>YOU CAN CONTACT US THROUGH THE FOLLOWING CHANNELS IN CASE OF ANY QUERIES:</p>
 </body>
 </html>
